OPSMN-4131: To prevent the overflow of table column contents, added CSS to break word at any arbitrary points if there are no acceptable break points in the line.

--- a/www/app/styles/table.css
+++ b/www/app/styles/table.css
@@ -17,6 +17,7 @@
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 1px solid #ddd;
+  word-break: break-word;
 }
 
 .os-table .os-table-head .row .col {
